applicationsets/quotes-vms-modern/kustomize/base/02_node-frontend-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
      argocd.argoproj.io/sync-wave: "5"
      console.alpha.openshift.io/overview-app-route: ‘true’
  labels:
    app: quotes-frontend
    app.kubernetes.io/part-of: quotes-serverless
    app.kubernetes.io/name: quotes-frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/instance: quotes-aws-dev
    app.kubernetes.io/environment: development
    app.kubernetes.io/version: "0.0.1"
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: "20.12.13"
  name: quotes-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
        app: quotes-frontend
  template:
    metadata:
      labels:
        app: quotes-frontend
    spec:
      containers:
        - name: quotes-frontend
          image: 'quay.io/ilago/quote-frontend:main'
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
