applicationsets/quotes-vms-modern/kustomize/base/00_virtualmachine.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: headless-service-backend
spec:
  clusterIP: None
  ipFamilies:
    - IPv4
  ports:
    - name: headless
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  clusterIPs:
    - None
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    network.kubevirt.io/headlessService: headless
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-backend
spec:
  path: /
  to:
    name: headless-service-backend
    weight: 100
    kind: Service
  host: ''
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: headless
  alternateBackends: []
