applicationsets/quotes-vms-modern/kustomize/base/04_node-route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
      argocd.argoproj.io/sync-wave: "7"
  name: quotes-frontend
  labels:
    app.kubernetes.io/component: route
    app.kubernetes.io/environment: development
    app.kubernetes.io/instance: quotes-aws-dev
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: quotes-frontend-route
    app.kubernetes.io/part-of: quotes-demo
spec:
  to:
    kind: Service
    name: quotes-frontend
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  port:
    targetPort: 5173
